@@ -73,12 +73,11 @@
                       </widget>
                     </child>
                     <child>
-                      <widget class="GtkLabel" id="label4">
+                      <widget class="GtkLabel" id="message_label">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="xalign">0</property>
-                        <property name="label" translatable="yes">You have probably discovered a bug. Please report it by providing the above information.</property>
-                        <property name="justify">GTK_JUSTIFY_RIGHT</property>
+                        <property name="label" translatable="yes">You have probably discovered a bug. Please report it by providing the above information and a description of what you were doing.</property>
                         <property name="wrap">True</property>
                         <property name="selectable">True</property>
                       </widget>
@@ -122,7 +121,7 @@
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
                 <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
-                <property name="label" translatable="no">gtk-quit</property>
+                <property name="label">gtk-quit</property>
                 <property name="use_stock">True</property>
                 <property name="response_id">-9</property>
               </widget>
