@@ -1,5 +1,13 @@
 2007-06-28  Osmo Salomaa  <otsaloma@cc.hut.fi>
 
+	* data/glade/debug-dialog.glade:
+	Change the message label wording.
+
+	* gaupol/gtk/dialogs/debug.py (_resize):
+	Set the message label size request to wrap the text nicer.
+
+2007-06-28  Osmo Salomaa  <otsaloma@cc.hut.fi>
+
 	* gaupol/gtk/page.py:
 	When the project emits a *-changed signal, move the focus row only if
 	it currently is outside the changed rows.
